# Smart_Socket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.json  sdkconfig
components/BH1750/: BH1750.c  CMakeLists.txt
components/BH1750/include/: BH1750.h
components/BasicDrive/: BasicDrive.c  CMakeLists.txt  led_strip_encoder.c
components/BasicDrive/include/: BasicDrive.h
components/HLW032/: CMakeLists.txt  HLW032.c
components/HLW032/include/: HLW032.h
components/LinkSDK/: CMakeLists.txt  ChangeLog.md
components/LinkSDK/core/: aiot_mqtt_api.c
components/LinkSDK/core/sysdep/: core_adapter.c
components/LinkSDK/portfiles/aiot_port/: freertos_port.c
components/SHTC3/: CMakeLists.txt  SHTC3.c
components/SHTC3/include/: SHTC3.h
components/alMQTT/: CMakeLists.txt  alMQTT.c  pal_prop_post_api.c  pal_prop_set_api.c
components/alMQTT/include/: alMQTT.h  pal_prop_post_api.h  pal_prop_set_api.h
components/button/: CMakeLists.txt
components/cJSON/: CMakeLists.txt
components/cloud/: CMakeLists.txt  cloud.c  cloud_data.c
components/cloud/include/: cloud.h  cloud_data.h
components/qcloud/config/sdkconfig_defaults/: sdkconfig.hight_perf.esp32
components/qcloud/include/: esp_qcloud_utils.h
main/: main.c
